# stock_sentiment

./: docker-compose.yml  help.txt  main.py  next_step.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 050ccce84f79_updated_stock_uniqueness.py  07abeac265f2_initial_tables.py  1cf778c72740_initial_tables.py  26dfc2894aa1_check_update_2.py  9864e7e5e570_change_desc_for_a_table_to_make_it_.py  c6c9a28ddbd9_check_update_1.py  d8f2e0218a4b_nse_auto_gather_data.py  e3f3482bd113_new_added.py  fcc507e0f3c1_table_updated.py
api/: ingest_route.py
api/helpers/: ingest_watched_stock.py
api/routes/: watch_stocks.py
api/stock_data/services/: yfinance_service.py
config/: settings.py
db/: database.py
db/models/: __init__.py  analytics.py  raw_data.py  sentiment.py  stocks.py
schedule/: scheduler.py
schedule/scheduled_tasks/: stock_update_scheduler.py  yf_all_watchstock_update.py
schedule/scheduled_tasks/helper/: watch_stocks_helper.py
scrapers/: analyst_recommendation.py  google_news.py  news_scrap_newspaper4k.py  newsapi.py  nse.numbers  nse_stocks_csv.md  prompt.md  yfinance_search.py
tasks/: ingest_watched_stock.py  update_latest_stocks.py  watch_stock_route.py
